--- a/ultralytics/cfg/default.yaml
+++ b/ultralytics/cfg/default.yaml
@@ -12,7 +12,7 @@ data: # (str, optional) path to data file, i.e. coco8.yaml
 epochs: 100 # (int) number of epochs to train for
 time: # (float, optional) max hours to train; overrides epochs if set
 patience: 100 # (int) early stop after N epochs without val improvement
-batch: 16 # (int) batch size; use -1 for AutoBatch
+batch: 4 # (int) batch size; use -1 for AutoBatch
 imgsz: 640 # (int | list) train/val use int (square); predict/export may use [h,w]
 save: True # (bool) save train checkpoints and predict results
 save_period: -1 # (int) save checkpoint every N epochs; disabled if < 1
@@ -118,6 +118,16 @@ bgr: 0.0 # (float) RGB↔BGR channel swap probability
 mosaic: 1.0 # (float) mosaic augmentation probability
 mixup: 0.0 # (float) MixUp augmentation probability
 cutmix: 0.0 # (float) CutMix augmentation probability
+
+# VersatileTeacher (teacher-student domain adaptation) ---------------------------------------------------------------
+vt_lambda_da: 0.1 # (float) domain adaptation loss weight
+vt_lambda_consensus: 0.1 # (float) image/instance consensus loss weight
+vt_conf: 0.25 # (float) confidence threshold for teacher pseudo-label NMS
+vt_iou: 0.45 # (float) IoU threshold for teacher pseudo-label NMS
+vt_phase1_epochs: 0 # (int) phase-1 epochs (domain-aware pretraining, no pseudo-labels); 0 disables
+vt_source_weak: True # (bool) disable heavy YOLO augs on source (mosaic/mixup/copy-paste + strong HSV/geo)
+vt_val_target: True # (bool) validate on target domain (GT only for evaluation)
+vt_val_per_class: True # (bool) print per-class metrics during training/validation
 copy_paste: 0.0 # (float) segmentation copy-paste probability
 copy_paste_mode: flip # (str) copy-paste strategy for segmentation: flip or mixup
 auto_augment: randaugment # (str) classification auto augmentation policy: randaugment, autoaugment, augmix
