feat(vt): 添加统一图像级域分类器和注意力对齐损失
- 实现 VTUnifiedImageDomainTap 模块用于多尺度融合的统一图像级域分类
- 添加通道注意力机制到图像域分类器中提升性能
- 增加注意力对齐损失功能用于源域和目标域注意力图对齐
- 在训练流程中集成注意力对齐损失计算和损失项跟踪
- 添加 vt_lambda_attn 和 vt_use_unified 配置参数控制新功能
- 更新 YOLO11-VT 模型配置以支持新的统一图像级域分类器
- 实现注意力图获取和对齐损失计算相关辅助函数

--- a/ultralytics/cfg/models/11/yolo11-vt.yaml
+++ b/ultralytics/cfg/models/11/yolo11-vt.yaml
@@ -53,8 +53,9 @@ head:
   - [4, 1, VTImageDomainTap, [80, 0.1]] # 26 (backbone P3, 640/8=80)
   - [6, 1, VTImageDomainTap, [40, 0.1]] # 27 (backbone P4, 640/16=40)
   - [8, 1, VTImageDomainTap, [20, 0.1]] # 28 (backbone P5, 640/32=20)
-  - [16, 1, VTInstanceDomainTap, [0.1, True]] # 29
-  - [19, 1, VTInstanceDomainTap, [0.1, True]] # 30
-  - [22, 1, VTInstanceDomainTap, [0.1, True]] # 31
+  - [[4, 6, 8], 1, VTUnifiedImageDomainTap, [20, 0.1, 128]] # 29 (unified P5, 20x20)
+  - [16, 1, VTInstanceDomainTap, [0.1, True]] # 30
+  - [19, 1, VTInstanceDomainTap, [0.1, True]] # 31
+  - [22, 1, VTInstanceDomainTap, [0.1, True]] # 32
 
-  - [[16, 19, 22], 1, Detect, [nc]] # 32 Detect(P3, P4, P5)
+  - [[16, 19, 22], 1, Detect, [nc]] # 33 Detect(P3, P4, P5)
