--- a/ultralytics/cfg/default.yaml
+++ b/ultralytics/cfg/default.yaml
@@ -122,6 +122,7 @@ cutmix: 0.0 # (float) CutMix augmentation probability
 # VersatileTeacher (teacher-student domain adaptation) ---------------------------------------------------------------
 vt_lambda_da: 0.1 # (float) domain adaptation loss weight
 vt_lambda_consensus: 0.1 # (float) image/instance consensus loss weight
+vt_lambda_attn: 0.0 # (float) attention alignment loss weight for image-level taps
 vt_conf: 0.2 # (float) confidence threshold for teacher pseudo-label NMS (VT uses 0.2 for CAPS density)
 vt_iou: 0.45 # (float) IoU threshold for teacher pseudo-label NMS
 vt_phase1_epochs: 0 # (int) phase-1 epochs (domain-aware pretraining, no pseudo-labels); 0 disables
@@ -137,6 +138,7 @@ vt_pl_weight_cap: 1.0 # (float) cap on pseudo-label batch mean weight after CAPS
 vt_da_warmup_epochs: 0 # (int) phase-2 DA loss warmup epochs (0 disables)
 vt_caps: true # (bool) enable CAPS class-adaptive pseudo-label filtering (post-NMS)
 vt_caps_init: 0.8 # (float) CAPS initial per-class confidence threshold (VT default)
+vt_use_unified: False # (bool) enable unified image-level domain tap (UC-style multiscale fusion)
 vt_strong_enable: True # (bool) enable strong augmentation on target student branch
 vt_strong_brightness: 0.5 # (float) ColorJitter brightness strength (0 disables)
 vt_strong_contrast: 0.5 # (float) ColorJitter contrast strength (0 disables)
