feat(yolo): 添加VT训练中的软CAPS权重功能
- 在配置文件中新增vt_caps_soft参数，默认值为true
- 在VT训练器中初始化vt_caps_soft参数
- 实现软CAPS权重计算逻辑，基于sigmoid函数
- 根据类别置信度阈值和温度参数计算权重
- 支持gamma参数调整权重锐度
- 与现有伪标签损失权重融合机制集成

--- a/ultralytics/cfg/default.yaml
+++ b/ultralytics/cfg/default.yaml
@@ -132,6 +132,7 @@ vt_auto_pretrained: True # (bool) if model is YAML and pretrained=True, auto-ini
 vt_caps_q: 0.9 # (float) CAPS per-class confidence quantile (precision-first: higher)
 vt_caps_gamma: 2.0 # (float) pseudo-label soft weight sharpness (w^gamma), higher -> more precision-focused
 vt_caps_tau: 0.05 # (float) soft-weight temperature for sigmoid((conf-thr)/tau); smaller -> more precision
+vt_caps_soft: true # (bool) enable soft CAPS weighting (sigmoid-based)
 vt_pl_warmup_epochs: 0 # (int) phase-2 pseudo-label loss warmup epochs (0 disables, VT default)
 vt_pl_weight_cap: 1.0 # (float) cap on pseudo-label batch mean weight after CAPS (0..1)
 vt_da_warmup_epochs: 0 # (int) phase-2 DA loss warmup epochs (0 disables)
